Finalyze analysis and add test data

--- a/AnalyzeTweets.ipynb
+++ b/AnalyzeTweets.ipynb
@@ -1274,15 +1274,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "/opt/conda/lib/python3.6/site-packages/requests/__init__.py:91: RequestsDependencyWarning: urllib3 (1.25.2) or chardet (3.0.4) doesn't match a supported version!\n",
+      "  RequestsDependencyWarning)\n"
      ]
     }
    ],
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1398,28 +1398,23 @@
       "+-------------------+---------------+--------------------+--------------------+------+---------+\n",
       "|               date|       username|               tweet|            hashtags|nlikes|sentiment|\n",
       "+-------------------+---------------+--------------------+--------------------+------+---------+\n",
-      "|2019-05-03 15:33:19|   ultrabeast02|Me stays up for 2...|                  []|     1|      2.0|\n",
-      "|2019-05-03 15:31:32|DataScientistFr|Social Media Cont...|[#socialmedia, #d...|     1|      1.0|\n",
-      "|2019-05-03 15:31:04|     ahmedjr_16|10 Best Business ...|[#certification, ...|     0|      1.0|\n",
-      "|2019-05-03 15:30:36|        k_tebbe|Overall data scie...|                  []|     0|      1.0|\n",
-      "|2019-05-03 15:30:09|      iamjony94|27 of the Best In...|[#socialmedia, #d...|     0|      1.0|\n",
-      "|2019-05-03 15:30:07|      kendel423|I have a bachelor...|                  []|     1|      2.0|\n",
-      "|2019-05-03 15:30:02|  Deep_In_Depth|Data Augmentation...|[#deeplearning, #...|     0|      0.0|\n",
-      "|2019-05-03 15:30:02|       tianhuil|It might be a lon...|[#ai, #artificial...|     0|      1.0|\n",
-      "|2019-05-03 15:30:00|      BRIDGEi2i|Top Data Science ...|[#analytics, #big...|     0|      1.0|\n",
-      "|2019-05-03 15:28:21|           odsc|Thank you to all ...|         [#odsceast]|     0|      1.0|\n",
-      "|2019-05-03 15:27:36|  Datascience__|Big Data Science ...| [#datascience, #ad]|     0|      2.0|\n",
-      "|2019-05-03 15:27:36|  Datascience__|Smart Cities  Man...| [#datascience, #ad]|     0|      1.0|\n",
-      "|2019-05-03 15:27:29| TOSciPolicyNet|This brings us to...|                  []|     0|      1.0|\n",
-      "|2019-05-03 15:26:47|    aswangakira|the irony of hci ...|                  []|     0|      0.0|\n",
-      "|2019-05-03 15:26:40| MohamedChenini|I bought a copy o...|                  []|     0|      1.0|\n",
-      "|2019-05-03 15:26:33|       amcasari|cc python data sc...|                  []|     0|      0.0|\n",
-      "|2019-05-03 15:26:13|    mrpeterivan|New approach coul...|[#research, #comp...|     0|      1.0|\n",
-      "|2019-05-03 15:25:43|       codeinn_|Less than 30 days...|                  []|     2|      1.0|\n",
-      "|2019-05-03 15:25:35|     KirkDBorne|Thanks to all who...|[#odsceast, #data...|     1|      1.0|\n",
-      "|2019-05-03 15:25:08|        EHSData|Discover the tool...|[#disastermanagem...|     0|      0.0|\n",
+      "|2019-05-04 17:43:36|  alexssandroos|Caros de DataScie...|[#datascience, #p...|     0|      0.0|\n",
+      "|2019-05-04 17:40:23|   DS_Analytics|WorldCover raises...|[#datascience, #m...|     0|      2.0|\n",
+      "|2019-05-04 17:40:05|      iamjony94|12 Free Social Me...|[#socialmedia, #d...|     0|      1.0|\n",
+      "|2019-05-04 17:35:36|      Rbloggers|Fast food causali...|[#rstats, #datasc...|     1|      1.0|\n",
+      "|2019-05-04 17:34:26|  Datascience__|Data Science at t...|      [#datascience]|     0|      0.0|\n",
+      "|2019-05-04 17:34:26|  Datascience__|Notes from Course...|     [#deeplearning]|     0|      0.0|\n",
+      "|2019-05-04 17:34:25|  Datascience__|How to prepare fo...|[#machinelearning...|     0|      2.0|\n",
+      "|2019-05-04 17:34:19|   oliver_hoess|Digitalisierung K...|[#masterdatamanag...|     0|      0.0|\n",
+      "|2019-05-04 17:33:53|       Ananna16|Discounts  90 Off...|[#discounts, #dis...|     2|      1.0|\n",
+      "|2019-05-04 17:33:28|       xieergai|DS and DevOps che...|[#datascience, #b...|     0|      0.0|\n",
+      "|2019-05-04 17:32:55|    Inno_Trends|Digitalisierung K...|[#masterdatamanag...|     0|      0.0|\n",
+      "|2019-05-04 17:30:59|     ahmedjr_16|MachineLearning B...|[#machinelearning...|     1|      0.0|\n",
+      "|2019-05-04 17:30:14|     motakasoft|GitHub Trending A...|                  []|     0|      0.0|\n",
+      "|2019-05-04 17:30:13|nerdnitetoronto|The farthest you ...|[#mcdonalds, #the...|     0|      0.0|\n",
+      "|2019-05-04 17:30:09|arshvinder_2000|New AI Courses in...|                  []|     0|      1.0|\n",
+      "|2019-05-04 17:28:00|DataScienceCtrl|How to Clean Your...|                  []|     6|      1.0|\n",
       "+-------------------+---------------+--------------------+--------------------+------+---------+\n",
-      "only showing top 20 rows\n",
       "\n"
      ]
     }
@@ -1430,16 +1425,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9057"
+       "16"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1752,6 +1747,76 @@
    ],
    "source": [
     "generate_word_cloud(tweets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scaling up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+---------------+--------------------+--------------------+------+---------+\n",
+      "|               date|       username|               tweet|            hashtags|nlikes|sentiment|\n",
+      "+-------------------+---------------+--------------------+--------------------+------+---------+\n",
+      "|2019-05-04 17:43:36|  alexssandroos|Caros de DataScie...|[#datascience, #p...|     0|      0.0|\n",
+      "|2019-05-04 17:40:23|   DS_Analytics|WorldCover raises...|[#datascience, #m...|     0|      2.0|\n",
+      "|2019-05-04 17:40:05|      iamjony94|12 Free Social Me...|[#socialmedia, #d...|     0|      1.0|\n",
+      "|2019-05-04 17:35:36|      Rbloggers|Fast food causali...|[#rstats, #datasc...|     1|      1.0|\n",
+      "|2019-05-04 17:34:26|  Datascience__|Data Science at t...|      [#datascience]|     0|      0.0|\n",
+      "|2019-05-04 17:34:26|  Datascience__|Notes from Course...|     [#deeplearning]|     0|      0.0|\n",
+      "|2019-05-04 17:34:25|  Datascience__|How to prepare fo...|[#machinelearning...|     0|      2.0|\n",
+      "|2019-05-04 17:34:19|   oliver_hoess|Digitalisierung K...|[#masterdatamanag...|     0|      0.0|\n",
+      "|2019-05-04 17:33:53|       Ananna16|Discounts  90 Off...|[#discounts, #dis...|     2|      1.0|\n",
+      "|2019-05-04 17:33:28|       xieergai|DS and DevOps che...|[#datascience, #b...|     0|      0.0|\n",
+      "|2019-05-04 17:32:55|    Inno_Trends|Digitalisierung K...|[#masterdatamanag...|     0|      0.0|\n",
+      "|2019-05-04 17:30:59|     ahmedjr_16|MachineLearning B...|[#machinelearning...|     1|      0.0|\n",
+      "|2019-05-04 17:30:14|     motakasoft|GitHub Trending A...|                  []|     0|      0.0|\n",
+      "|2019-05-04 17:30:13|nerdnitetoronto|The farthest you ...|[#mcdonalds, #the...|     0|      0.0|\n",
+      "|2019-05-04 17:30:09|arshvinder_2000|New AI Courses in...|                  []|     0|      1.0|\n",
+      "|2019-05-04 17:28:00|DataScienceCtrl|How to Clean Your...|                  []|     6|      1.0|\n",
+      "|2019-05-04 17:45:25|      Rbloggers|Free online r cou...|[#rstats, #datasc...|     0|      1.0|\n",
+      "|2019-05-04 17:43:36|  alexssandroos|Caros de DataScie...|[#datascience, #p...|     0|      0.0|\n",
+      "|2019-05-04 17:40:23|   DS_Analytics|WorldCover raises...|[#datascience, #m...|     0|      2.0|\n",
+      "|2019-05-04 17:40:05|      iamjony94|12 Free Social Me...|[#socialmedia, #d...|     0|      1.0|\n",
+      "+-------------------+---------------+--------------------+--------------------+------+---------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_result = tweets_sentiment(\"data science\", limit=10000)\n",
+    "df_result.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10031"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_result.count()"
    ]
   }
  ],
